# medley

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: mdbook.yml
docs/: grammar-macro-spec.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  ast.md  errors.md  examples.md  grammar.md  intro.md  quickstart.md  streaming.md  troubleshooting.md
examples/: ast_transform.rs  ast_visitor.rs  csv_pull.rs  expr_pull.rs  parse_small.rs  parse_stream.rs  w3c_ebnf.rs
medley-macros/: Cargo.toml
medley-macros/src/: lib.rs
src/: ast.rs  ebnf.rs  lib.rs
src/ast/: builder.rs  node.rs  visitor.rs
src/ebnf/: grammar.rs  ir.rs  parser.rs  runtime.rs  span.rs
tests/: error_handling_tests.rs  grammar_macro_tests.rs  grammar_validation_tests.rs  language_parsing_tests.rs  macro_error_examples.rs  parser_tests.rs  performance_tests.rs  runtime_parser_tests.rs  span_and_diagnostics_tests.rs
